Исправил проект согласно ревью 1