@@ -25,9 +25,9 @@ class InMemoryHistoryManagerTest {
     void add_ShouldSavedPreviousVersionTaskAndItsData() {
         Task task = new Task("Задача 1", "Описание 1");
         taskManager.addNewTask(task);
-        taskManager.getAllTasks();
+        taskManager.getTaskById(task.getId());
         final List<Task> history = taskManager.getHistory();
-        final Task savedTask = history.get(0);
+        final Task savedTask = history.getFirst();
 
         assertNotNull(savedTask, "Задача не найдена.");
         assertEquals(task, savedTask, "Задачи не совпадают.");
@@ -43,6 +43,7 @@ class InMemoryHistoryManagerTest {
         for (int i = 0; i < 13; i++) {
             Task task = new Task("Задача 1", "Описание 1");
             taskManager.addNewTask(task);
+            taskManager.getTaskById(task.getId());
         }
         for (Task task : taskManager.getAllTasks()) {
             int count = taskManager.getHistory().size();
@@ -60,9 +61,10 @@ class InMemoryHistoryManagerTest {
             Subtask subtask = new Subtask("Задача 1", "Описание 1", epic.getId());
             taskManager.addNewSubtask(subtask);
         }
-        taskManager.getAllEpics();
-        taskManager.getAllSubtasks();
-        int countTasks = taskManager.getHistory().size();
+        taskManager.getEpicById(epic.getId());
+        for (Subtask subtask : taskManager.getAllSubtasks()) {
+            taskManager.getSubtaskById(subtask.getId());
+        }
         taskManager.deleteAllEpics();
         assertEquals(0, taskManager.getHistory().size(), "Подзадачи не удалены");
     }
@@ -72,23 +74,24 @@ class InMemoryHistoryManagerTest {
         for (int i = 0; i < 10; i++) {
             Task task = new Task(("Задача " + i), ("Описание " + i));
             taskManager.addNewTask(task);
+            taskManager.getTaskById(task.getId());
         }
-        taskManager.getAllTasks();
         int size = taskManager.getHistory().size();
         taskManager.getTaskById(5);
         assertEquals(size, taskManager.getHistory().size(), "Количество задач не изменилось");
         assertEquals(taskManager.getTaskById(5), taskManager.getHistory().get(size - 1), "Порядок задач не изменился");
 
     }
-@Test
+
+    @Test
     void add_ShouldTaskWithSameIsOverwrittenInHistory() {
 
         Task task = new Task(("Задача 1"), ("Описание 1"));
         taskManager.addNewTask(task);
 
-    taskManager.getTaskById(0);
-    String description = taskManager.getHistory().getFirst().getDescription();
-    taskManager.getTaskById(0).setDescription("Новое описание");
-    assertNotEquals(description, taskManager.getHistory().getFirst().getDescription(), "Задача не перезаписалась");
-}
+        taskManager.getTaskById(0);
+        String description = taskManager.getHistory().getFirst().getDescription();
+        taskManager.getTaskById(0).setDescription("Новое описание");
+        assertNotEquals(description, taskManager.getHistory().getFirst().getDescription(), "Задача не перезаписалась");
+    }
 }
